# strider

./: .clang-format  .gitignore  Kbuild  LICENSE-MIT  Makefile  Makefile.am  README.md  configure.ac  strider.c  wdum.c
.github/workflows/: build.yml  kunit.yml
cli/: Makefile  main.c
include/strider/: defs.h  limits.h  protocol.h  strider.h
include/strider/uapi/: limits.h  netlink.h
kernel/: Kbuild  main.c  netlink.c  netlink.h
kmod/: Kbuild  Makefile  aho_corasick.c  aho_corasick.h  aho_corasick_test.c  control.c  control.h  main.c  matching.c  matching.h  netlink.c  strider_ac.c  strider_ac.h  strider_ac_test.c  strider_manager.c  strider_manager.h
modules/: Makefile  logging.c  logging.h  matchers.c  matchers.h  rule.h  rule_base.c  rule_base.h  set_filter.c  user_comm.c  user_comm.h
strider/: Kbuild  Kconfig  Makefile  Makefile.am  ac.c  ac.h  ac_test.c  core.c  core.h  main.c  manager.c  manager.h  netlink.c  netlink.h
strider_core/: Kbuild  ac.c  ac.h  ac_test.c  control.c  main.c  manager.c  manager.h  strider_ac.c  strider_ac.h  strider_ac_test.c  strider_manager.c  strider_manager.h  strider_nl.c
striderctl/: Makefile  Makefile.am  main.c  striderctl.c
user/: Makefile
xt_strider/: Kbuild  Makefile  Makefile.am  libxt_strider.c  xt_strider.c  xt_strider.h
